# Memory_Pool

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOC.txt  README.md  cn_pool.c
binary/tests-out/: allocate_pool_test  init_pool_test  release_pool_test
cmake_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake_build/Testing/Temporary/: CTestCostData.txt
cmake_build/debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake_build/debug/Testing/Temporary/: CTestCostData.txt
include/: cn_pool.h  cn_pool_def.h  cn_pool_internal.h
tests/: allocate_pool_test.c  init_pool_test.c  release_pool_test.c
